--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -9,7 +9,6 @@ body {
 }
 
 .header {
-  padding: 20px;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
   background-color: #2a607c;
@@ -26,8 +25,7 @@ body {
 }
 
 .header div {
-  padding-top: 15px;
-  margin-right: 20px;
+  padding-bottom: -2%
   float: right;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-size: 20px;
@@ -39,7 +37,7 @@ body {
 
 .header div ul li {
   display: inline-block;
-  margin-left: 25px;
+  margin-right: 25px;
 }
 
 a {
