--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -27,8 +27,10 @@ body {
 .header div {
   padding-bottom: -2%
   float: right;
+  margin-bottom: auto;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-size: 20px;
+  
 }
 
 .header div ul {
