--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -24,13 +24,13 @@ body {
   color: #d9dcd6;
 }
 
-.header div {
-  padding-bottom: -2%
+.header nav {
+  padding-bottom: -2%;
   float: right;
   margin-bottom: auto;
+  margin-top: 20px;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  font-size: 20px;
-  
+  font-size: 30px;
 }
 
 .header div ul {
